--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 <!--body element -->
 <body>
+  <div class="navbar">
+        <a href="AUDI html.html">Home</a>
+        <a href="index.html">About</a>
+        <a href="contacts.html">Contact</a>
+    </div>
 
 <!--heading one div -->
   <div class="header">
@@ -54,6 +59,5 @@
 
    <div style="clear: both;"></div> 
   </div>
-<a href="AUDI html.html">HOME page></a>
 </body>
 </html>
