--- a/contacts.html
+++ b/contacts.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <h1>Contact us at:</h1>
+   <head>
+    <div style="color: black;text-align: left;"class="navbar">
+        <a href="AUDI html.html">Home</a>
+        <a href="index.html">About</a>
+        <a href="contacts.html">Contact</a>
+    </div>
+    
+    <h1 style="color: black;text-align: center;">Contact us at:</h1>
+   </head> 
+   <body style="background-color: dimgray;color: black;text-align: center;"> 
     <p>(888) 237-2834, Head office</p>
-    <p>For maintenance issuues contact: (888) AFS-AUDI and for more info. go to: </p>
-    <a href="Maintenance.html">HELP></a>
-    <a href="AUDI html.html">AUDI></a>
- </html>
+    <p>For maintenance issuues contact: (888) 354-9804, Garage </p>
+   </body>
+</html>
